// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobStreet header component Authentication status should render when pending authenticating user 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <PageBlock
    className="navWrapper navWrapperHideOnMobile"
  >
    <div
      className="navContainer"
    >
      <Nav
        key="navLinks"
        links={
          Array [
            Object {
              "childLinks": Array [],
              "href": "header.homeLink",
              "text": "header.homeText",
              "title": "header.homeTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.searchLink",
              "text": "header.searchText",
              "title": "header.searchTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.myJobStreetLink",
              "text": "header.myJobStreetText",
              "title": "header.myJobStreetTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.companyProfilesLink",
              "text": "header.companyProfilesText",
              "title": "header.companyProfilesTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.careerInsightsLink",
              "text": "header.careerInsightsText",
              "title": "header.careerInsightsTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.jobStreetEducationLink",
              "text": "header.jobStreetEducationText",
              "title": "header.jobStretEducationTitle",
            },
            Object {
              "childLinks": Array [
                Object {
                  "href": "header.overseasJobsLink",
                  "text": "header.overseasJobsText",
                  "title": "header.overseasJobsTitle",
                },
                Object {
                  "href": "header.freshGradJobsLink",
                  "text": "header.freshGradJobsText",
                  "title": "header.freshGradJobsTitle",
                },
                Object {
                  "href": "header.classifiedJobsLink",
                  "text": "header.classifiedJobsText",
                  "title": "header.classifiedJobsTitle",
                },
              ],
              "hideOnMobile": true,
              "href": "header.moreLink",
              "text": "header.moreText",
              "title": "header.moreTitle",
            },
          ]
        }
        messages={
          Object {
            "footer.aboutLink": "https://jobstreet.com.my/en/about-us/",
            "footer.aboutLinkText": "About Us",
            "footer.copyright": "Copyright © {year} JobStreet.com",
            "footer.feedbackLink": "https://myjobstreet.jobstreet.com.my/home/feedback.php?site=my&sub=feedback",
            "footer.feedbackLinkText": "Send Feedback",
            "footer.helpLink": "https://jobstreet.com.my/en/user/",
            "footer.helpLinkText": "Help",
            "footer.link": "https://www.jobstreet.com",
            "footer.linkText": "JobStreet International",
            "footer.privacyLink": "https://jobstreet.com.my/en/about-us/privacy-policy/",
            "footer.privacyLinkText": "Privacy Policy",
            "footer.profilesLink": "https://jobstreet.com.my/career/JobStreet.htm",
            "footer.profilesLinkText": "Work With Us",
            "footer.safeLink": "https://jobstreet.com.my/en/about-us/safe-job-search-guide/",
            "footer.safeLinkText": "Safe Job Search Guide",
            "footer.siteMapLink": "https://jobstreet.com.my/sitemap.htm",
            "footer.siteMapLinkText": "Site Map",
            "footer.termsLink": "https://jobstreet.com.my/en/about-us/terms-of-use/",
            "footer.termsLinkText": "Term of Use",
            "header.careerInsightsLink": "https://jobstreet.com.my/en/career-insights",
            "header.careerInsightsText": "Career Insights",
            "header.careerInsightsTitle": "JobStreet.com Malaysia - Career Insights",
            "header.classifiedJobsLink": "https://www.jobstreet.com.my/en/job-search/classified-ads.php",
            "header.classifiedJobsText": "Classified Jobs",
            "header.classifiedJobsTitle": "",
            "header.companyProfilesLink": "https://jobstreet.com.my/en/companies",
            "header.companyProfilesText": "Company Profiles",
            "header.companyProfilesTitle": "JobStreet.com Malaysia - Company Profiles",
            "header.employerLink": "https://jobstreet.com.my/en/cms/employer",
            "header.employerText": "Employer",
            "header.employerTitle": "Post a Job Ad: +603-2176 0333",
            "header.freshGradJobsLink": "https://www.jobstreet.com.my/en/job-search/campus/job-vacancy.php",
            "header.freshGradJobsText": "Fresh Grad Jobs",
            "header.freshGradJobsTitle": "",
            "header.helpLink": "https://myjobstreet.jobstreet.com.my/home/help.php?",
            "header.helpText": "Help",
            "header.helpTitle": "",
            "header.homeLink": "https://jobstreet.com.my",
            "header.homeText": "Home",
            "header.homeTitle": "Leading Job Site in Malaysia - Find Jobs in Malaysia",
            "header.jobStreetEducationLink": "https://www.jobstreeteducation.com.my/",
            "header.jobStreetEducationText": "Education",
            "header.jobStreetEducationTitle": "",
            "header.loginLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my&language_code=3",
            "header.loginText": "Log In",
            "header.loginTitle": "",
            "header.logoutLink": "https://myjobstreet.jobstreet.com.my/home/logout.php?",
            "header.logoutText": "Logout",
            "header.logoutTitle": "",
            "header.moreText": "More",
            "header.moreTitle": "",
            "header.myAccountLink": "https://myjobstreet.jobstreet.com.my/registration/update-account.php?",
            "header.myAccountText": "My Account",
            "header.myAccountTitle": "",
            "header.myJobStreetLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
            "header.myJobStreetLoggedInLink": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
            "header.myJobStreetText": "MyJobStreet",
            "header.myJobStreetTitle": "Post Resume, Signup for Job Alert & Apply for Jobs @ MyJobStreet Malaysia",
            "header.overseasJobsLink": "https://www.jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
            "header.overseasJobsText": "Overseas Jobs",
            "header.overseasJobsTitle": "",
            "header.searchLink": "https://srp-alpha.jobstreet.com",
            "header.searchText": "Search Jobs",
            "header.searchTitle": "Search Jobs @ Job Search JobStreet.com Malaysia",
            "header.signUpLink": "https://myjobstreet.jobstreet.com.my/registration/simple-signup.php?site=my&language_code=3",
            "header.signUpText": "Sign Up",
            "header.signUpTitle": "",
          }
        }
      />
    </div>
  </PageBlock>
  <PageBlock
    className="bannerWrapper"
  >
    <Section
      className="bannerContainer"
    >
      <Button
        className="toggle"
        component="button"
        fullWidth={false}
        loading={false}
        onClick={[Function]}
      >
        <HamburgerIcon />
      </Button>
      <div
        className="logoContainer"
      >
        <a
          href="/"
          title="Leading Job Site in Malaysia - Find Jobs in Malaysia"
        >
          <Logo
            className="logo"
            svgClassName=""
          />
        </a>
      </div>
      <a
        className="employerLink"
        href="https://jobstreet.com.my/en/cms/employer"
        title="Post a Job Ad: +603-2176 0333"
      >
        <Text
          baseline={true}
          strong={true}
        >
          Employer
        </Text>
      </a>
    </Section>
  </PageBlock>
</header>
`;

exports[`JobStreet header component Authentication status should render with authenticated user 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <PageBlock
    className="navWrapper navWrapperHideOnMobile"
  >
    <div
      className="navContainer"
    >
      <Nav
        key="navLinks"
        links={
          Array [
            Object {
              "childLinks": Array [],
              "href": "header.homeLink",
              "text": "header.homeText",
              "title": "header.homeTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.searchLink",
              "text": "header.searchText",
              "title": "header.searchTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.myJobStreetLoggedInLink",
              "hrefParams": Object {
                "x": undefined,
              },
              "text": "header.myJobStreetText",
              "title": "header.myJobStreetTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.companyProfilesLink",
              "text": "header.companyProfilesText",
              "title": "header.companyProfilesTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.careerInsightsLink",
              "text": "header.careerInsightsText",
              "title": "header.careerInsightsTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.jobStreetEducationLink",
              "text": "header.jobStreetEducationText",
              "title": "header.jobStretEducationTitle",
            },
            Object {
              "childLinks": Array [
                Object {
                  "href": "header.overseasJobsLink",
                  "text": "header.overseasJobsText",
                  "title": "header.overseasJobsTitle",
                },
                Object {
                  "href": "header.freshGradJobsLink",
                  "text": "header.freshGradJobsText",
                  "title": "header.freshGradJobsTitle",
                },
                Object {
                  "href": "header.classifiedJobsLink",
                  "text": "header.classifiedJobsText",
                  "title": "header.classifiedJobsTitle",
                },
              ],
              "hideOnMobile": true,
              "href": "header.moreLink",
              "text": "header.moreText",
              "title": "header.moreTitle",
            },
          ]
        }
        messages={
          Object {
            "footer.aboutLink": "https://jobstreet.com.my/en/about-us/",
            "footer.aboutLinkText": "About Us",
            "footer.copyright": "Copyright © {year} JobStreet.com",
            "footer.feedbackLink": "https://myjobstreet.jobstreet.com.my/home/feedback.php?site=my&sub=feedback",
            "footer.feedbackLinkText": "Send Feedback",
            "footer.helpLink": "https://jobstreet.com.my/en/user/",
            "footer.helpLinkText": "Help",
            "footer.link": "https://www.jobstreet.com",
            "footer.linkText": "JobStreet International",
            "footer.privacyLink": "https://jobstreet.com.my/en/about-us/privacy-policy/",
            "footer.privacyLinkText": "Privacy Policy",
            "footer.profilesLink": "https://jobstreet.com.my/career/JobStreet.htm",
            "footer.profilesLinkText": "Work With Us",
            "footer.safeLink": "https://jobstreet.com.my/en/about-us/safe-job-search-guide/",
            "footer.safeLinkText": "Safe Job Search Guide",
            "footer.siteMapLink": "https://jobstreet.com.my/sitemap.htm",
            "footer.siteMapLinkText": "Site Map",
            "footer.termsLink": "https://jobstreet.com.my/en/about-us/terms-of-use/",
            "footer.termsLinkText": "Term of Use",
            "header.careerInsightsLink": "https://jobstreet.com.my/en/career-insights",
            "header.careerInsightsText": "Career Insights",
            "header.careerInsightsTitle": "JobStreet.com Malaysia - Career Insights",
            "header.classifiedJobsLink": "https://www.jobstreet.com.my/en/job-search/classified-ads.php",
            "header.classifiedJobsText": "Classified Jobs",
            "header.classifiedJobsTitle": "",
            "header.companyProfilesLink": "https://jobstreet.com.my/en/companies",
            "header.companyProfilesText": "Company Profiles",
            "header.companyProfilesTitle": "JobStreet.com Malaysia - Company Profiles",
            "header.employerLink": "https://jobstreet.com.my/en/cms/employer",
            "header.employerText": "Employer",
            "header.employerTitle": "Post a Job Ad: +603-2176 0333",
            "header.freshGradJobsLink": "https://www.jobstreet.com.my/en/job-search/campus/job-vacancy.php",
            "header.freshGradJobsText": "Fresh Grad Jobs",
            "header.freshGradJobsTitle": "",
            "header.helpLink": "https://myjobstreet.jobstreet.com.my/home/help.php?",
            "header.helpText": "Help",
            "header.helpTitle": "",
            "header.homeLink": "https://jobstreet.com.my",
            "header.homeText": "Home",
            "header.homeTitle": "Leading Job Site in Malaysia - Find Jobs in Malaysia",
            "header.jobStreetEducationLink": "https://www.jobstreeteducation.com.my/",
            "header.jobStreetEducationText": "Education",
            "header.jobStreetEducationTitle": "",
            "header.loginLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my&language_code=3",
            "header.loginText": "Log In",
            "header.loginTitle": "",
            "header.logoutLink": "https://myjobstreet.jobstreet.com.my/home/logout.php?",
            "header.logoutText": "Logout",
            "header.logoutTitle": "",
            "header.moreText": "More",
            "header.moreTitle": "",
            "header.myAccountLink": "https://myjobstreet.jobstreet.com.my/registration/update-account.php?",
            "header.myAccountText": "My Account",
            "header.myAccountTitle": "",
            "header.myJobStreetLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
            "header.myJobStreetLoggedInLink": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
            "header.myJobStreetText": "MyJobStreet",
            "header.myJobStreetTitle": "Post Resume, Signup for Job Alert & Apply for Jobs @ MyJobStreet Malaysia",
            "header.overseasJobsLink": "https://www.jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
            "header.overseasJobsText": "Overseas Jobs",
            "header.overseasJobsTitle": "",
            "header.searchLink": "https://srp-alpha.jobstreet.com",
            "header.searchText": "Search Jobs",
            "header.searchTitle": "Search Jobs @ Job Search JobStreet.com Malaysia",
            "header.signUpLink": "https://myjobstreet.jobstreet.com.my/registration/simple-signup.php?site=my&language_code=3",
            "header.signUpText": "Sign Up",
            "header.signUpTitle": "",
          }
        }
      />
      <Nav
        key="userLinks"
        links={
          Array [
            Object {
              "childLinks": Array [
                Object {
                  "href": "header.logoutLink",
                  "hrefParams": Object {
                    "x": undefined,
                  },
                  "text": "header.logoutText",
                  "title": "header.logoutTitle",
                },
                Object {
                  "hasDivider": true,
                  "hideOnMobile": true,
                  "href": "header.helpLink",
                  "hrefParams": Object {
                    "x": undefined,
                  },
                  "text": "header.helpText",
                  "title": "header.helpTitle",
                },
                Object {
                  "hideOnMobile": true,
                  "href": "header.myAccountLink",
                  "hrefParams": Object {
                    "x": undefined,
                  },
                  "text": "header.myAccountText",
                  "title": "header.myAccountTitle",
                },
              ],
              "href": "#",
              "preventTranslation": true,
              "text": "Oliver Q.",
              "title": "Oliver Q.",
            },
          ]
        }
        messages={
          Object {
            "footer.aboutLink": "https://jobstreet.com.my/en/about-us/",
            "footer.aboutLinkText": "About Us",
            "footer.copyright": "Copyright © {year} JobStreet.com",
            "footer.feedbackLink": "https://myjobstreet.jobstreet.com.my/home/feedback.php?site=my&sub=feedback",
            "footer.feedbackLinkText": "Send Feedback",
            "footer.helpLink": "https://jobstreet.com.my/en/user/",
            "footer.helpLinkText": "Help",
            "footer.link": "https://www.jobstreet.com",
            "footer.linkText": "JobStreet International",
            "footer.privacyLink": "https://jobstreet.com.my/en/about-us/privacy-policy/",
            "footer.privacyLinkText": "Privacy Policy",
            "footer.profilesLink": "https://jobstreet.com.my/career/JobStreet.htm",
            "footer.profilesLinkText": "Work With Us",
            "footer.safeLink": "https://jobstreet.com.my/en/about-us/safe-job-search-guide/",
            "footer.safeLinkText": "Safe Job Search Guide",
            "footer.siteMapLink": "https://jobstreet.com.my/sitemap.htm",
            "footer.siteMapLinkText": "Site Map",
            "footer.termsLink": "https://jobstreet.com.my/en/about-us/terms-of-use/",
            "footer.termsLinkText": "Term of Use",
            "header.careerInsightsLink": "https://jobstreet.com.my/en/career-insights",
            "header.careerInsightsText": "Career Insights",
            "header.careerInsightsTitle": "JobStreet.com Malaysia - Career Insights",
            "header.classifiedJobsLink": "https://www.jobstreet.com.my/en/job-search/classified-ads.php",
            "header.classifiedJobsText": "Classified Jobs",
            "header.classifiedJobsTitle": "",
            "header.companyProfilesLink": "https://jobstreet.com.my/en/companies",
            "header.companyProfilesText": "Company Profiles",
            "header.companyProfilesTitle": "JobStreet.com Malaysia - Company Profiles",
            "header.employerLink": "https://jobstreet.com.my/en/cms/employer",
            "header.employerText": "Employer",
            "header.employerTitle": "Post a Job Ad: +603-2176 0333",
            "header.freshGradJobsLink": "https://www.jobstreet.com.my/en/job-search/campus/job-vacancy.php",
            "header.freshGradJobsText": "Fresh Grad Jobs",
            "header.freshGradJobsTitle": "",
            "header.helpLink": "https://myjobstreet.jobstreet.com.my/home/help.php?",
            "header.helpText": "Help",
            "header.helpTitle": "",
            "header.homeLink": "https://jobstreet.com.my",
            "header.homeText": "Home",
            "header.homeTitle": "Leading Job Site in Malaysia - Find Jobs in Malaysia",
            "header.jobStreetEducationLink": "https://www.jobstreeteducation.com.my/",
            "header.jobStreetEducationText": "Education",
            "header.jobStreetEducationTitle": "",
            "header.loginLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my&language_code=3",
            "header.loginText": "Log In",
            "header.loginTitle": "",
            "header.logoutLink": "https://myjobstreet.jobstreet.com.my/home/logout.php?",
            "header.logoutText": "Logout",
            "header.logoutTitle": "",
            "header.moreText": "More",
            "header.moreTitle": "",
            "header.myAccountLink": "https://myjobstreet.jobstreet.com.my/registration/update-account.php?",
            "header.myAccountText": "My Account",
            "header.myAccountTitle": "",
            "header.myJobStreetLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
            "header.myJobStreetLoggedInLink": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
            "header.myJobStreetText": "MyJobStreet",
            "header.myJobStreetTitle": "Post Resume, Signup for Job Alert & Apply for Jobs @ MyJobStreet Malaysia",
            "header.overseasJobsLink": "https://www.jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
            "header.overseasJobsText": "Overseas Jobs",
            "header.overseasJobsTitle": "",
            "header.searchLink": "https://srp-alpha.jobstreet.com",
            "header.searchText": "Search Jobs",
            "header.searchTitle": "Search Jobs @ Job Search JobStreet.com Malaysia",
            "header.signUpLink": "https://myjobstreet.jobstreet.com.my/registration/simple-signup.php?site=my&language_code=3",
            "header.signUpText": "Sign Up",
            "header.signUpTitle": "",
          }
        }
      />
    </div>
  </PageBlock>
  <PageBlock
    className="bannerWrapper"
  >
    <Section
      className="bannerContainer"
    >
      <Button
        className="toggle"
        component="button"
        fullWidth={false}
        loading={false}
        onClick={[Function]}
      >
        <HamburgerIcon />
      </Button>
      <div
        className="logoContainer"
      >
        <a
          href="/"
          title="Leading Job Site in Malaysia - Find Jobs in Malaysia"
        >
          <Logo
            className="logo"
            svgClassName=""
          />
        </a>
      </div>
      <a
        className="employerLink"
        href="https://jobstreet.com.my/en/cms/employer"
        title="Post a Job Ad: +603-2176 0333"
      >
        <Text
          baseline={true}
          strong={true}
        >
          Employer
        </Text>
      </a>
    </Section>
  </PageBlock>
</header>
`;

exports[`JobStreet header component Authentication status should render with unauthenticated user 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <PageBlock
    className="navWrapper navWrapperHideOnMobile"
  >
    <div
      className="navContainer"
    >
      <Nav
        key="navLinks"
        links={
          Array [
            Object {
              "childLinks": Array [],
              "href": "header.homeLink",
              "text": "header.homeText",
              "title": "header.homeTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.searchLink",
              "text": "header.searchText",
              "title": "header.searchTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.myJobStreetLink",
              "text": "header.myJobStreetText",
              "title": "header.myJobStreetTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.companyProfilesLink",
              "text": "header.companyProfilesText",
              "title": "header.companyProfilesTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.careerInsightsLink",
              "text": "header.careerInsightsText",
              "title": "header.careerInsightsTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.jobStreetEducationLink",
              "text": "header.jobStreetEducationText",
              "title": "header.jobStretEducationTitle",
            },
            Object {
              "childLinks": Array [
                Object {
                  "href": "header.overseasJobsLink",
                  "text": "header.overseasJobsText",
                  "title": "header.overseasJobsTitle",
                },
                Object {
                  "href": "header.freshGradJobsLink",
                  "text": "header.freshGradJobsText",
                  "title": "header.freshGradJobsTitle",
                },
                Object {
                  "href": "header.classifiedJobsLink",
                  "text": "header.classifiedJobsText",
                  "title": "header.classifiedJobsTitle",
                },
              ],
              "hideOnMobile": true,
              "href": "header.moreLink",
              "text": "header.moreText",
              "title": "header.moreTitle",
            },
          ]
        }
        messages={
          Object {
            "footer.aboutLink": "https://jobstreet.com.my/en/about-us/",
            "footer.aboutLinkText": "About Us",
            "footer.copyright": "Copyright © {year} JobStreet.com",
            "footer.feedbackLink": "https://myjobstreet.jobstreet.com.my/home/feedback.php?site=my&sub=feedback",
            "footer.feedbackLinkText": "Send Feedback",
            "footer.helpLink": "https://jobstreet.com.my/en/user/",
            "footer.helpLinkText": "Help",
            "footer.link": "https://www.jobstreet.com",
            "footer.linkText": "JobStreet International",
            "footer.privacyLink": "https://jobstreet.com.my/en/about-us/privacy-policy/",
            "footer.privacyLinkText": "Privacy Policy",
            "footer.profilesLink": "https://jobstreet.com.my/career/JobStreet.htm",
            "footer.profilesLinkText": "Work With Us",
            "footer.safeLink": "https://jobstreet.com.my/en/about-us/safe-job-search-guide/",
            "footer.safeLinkText": "Safe Job Search Guide",
            "footer.siteMapLink": "https://jobstreet.com.my/sitemap.htm",
            "footer.siteMapLinkText": "Site Map",
            "footer.termsLink": "https://jobstreet.com.my/en/about-us/terms-of-use/",
            "footer.termsLinkText": "Term of Use",
            "header.careerInsightsLink": "https://jobstreet.com.my/en/career-insights",
            "header.careerInsightsText": "Career Insights",
            "header.careerInsightsTitle": "JobStreet.com Malaysia - Career Insights",
            "header.classifiedJobsLink": "https://www.jobstreet.com.my/en/job-search/classified-ads.php",
            "header.classifiedJobsText": "Classified Jobs",
            "header.classifiedJobsTitle": "",
            "header.companyProfilesLink": "https://jobstreet.com.my/en/companies",
            "header.companyProfilesText": "Company Profiles",
            "header.companyProfilesTitle": "JobStreet.com Malaysia - Company Profiles",
            "header.employerLink": "https://jobstreet.com.my/en/cms/employer",
            "header.employerText": "Employer",
            "header.employerTitle": "Post a Job Ad: +603-2176 0333",
            "header.freshGradJobsLink": "https://www.jobstreet.com.my/en/job-search/campus/job-vacancy.php",
            "header.freshGradJobsText": "Fresh Grad Jobs",
            "header.freshGradJobsTitle": "",
            "header.helpLink": "https://myjobstreet.jobstreet.com.my/home/help.php?",
            "header.helpText": "Help",
            "header.helpTitle": "",
            "header.homeLink": "https://jobstreet.com.my",
            "header.homeText": "Home",
            "header.homeTitle": "Leading Job Site in Malaysia - Find Jobs in Malaysia",
            "header.jobStreetEducationLink": "https://www.jobstreeteducation.com.my/",
            "header.jobStreetEducationText": "Education",
            "header.jobStreetEducationTitle": "",
            "header.loginLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my&language_code=3",
            "header.loginText": "Log In",
            "header.loginTitle": "",
            "header.logoutLink": "https://myjobstreet.jobstreet.com.my/home/logout.php?",
            "header.logoutText": "Logout",
            "header.logoutTitle": "",
            "header.moreText": "More",
            "header.moreTitle": "",
            "header.myAccountLink": "https://myjobstreet.jobstreet.com.my/registration/update-account.php?",
            "header.myAccountText": "My Account",
            "header.myAccountTitle": "",
            "header.myJobStreetLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
            "header.myJobStreetLoggedInLink": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
            "header.myJobStreetText": "MyJobStreet",
            "header.myJobStreetTitle": "Post Resume, Signup for Job Alert & Apply for Jobs @ MyJobStreet Malaysia",
            "header.overseasJobsLink": "https://www.jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
            "header.overseasJobsText": "Overseas Jobs",
            "header.overseasJobsTitle": "",
            "header.searchLink": "https://srp-alpha.jobstreet.com",
            "header.searchText": "Search Jobs",
            "header.searchTitle": "Search Jobs @ Job Search JobStreet.com Malaysia",
            "header.signUpLink": "https://myjobstreet.jobstreet.com.my/registration/simple-signup.php?site=my&language_code=3",
            "header.signUpText": "Sign Up",
            "header.signUpTitle": "",
          }
        }
      />
      <Nav
        key="userLinks"
        links={
          Array [
            Object {
              "childLinks": Array [],
              "hasRightSideDivider": true,
              "href": "header.loginLink",
              "text": "header.loginText",
              "title": "header.loginTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.signUpLink",
              "text": "header.signUpText",
              "title": "header.signUpTitle",
            },
          ]
        }
        messages={
          Object {
            "footer.aboutLink": "https://jobstreet.com.my/en/about-us/",
            "footer.aboutLinkText": "About Us",
            "footer.copyright": "Copyright © {year} JobStreet.com",
            "footer.feedbackLink": "https://myjobstreet.jobstreet.com.my/home/feedback.php?site=my&sub=feedback",
            "footer.feedbackLinkText": "Send Feedback",
            "footer.helpLink": "https://jobstreet.com.my/en/user/",
            "footer.helpLinkText": "Help",
            "footer.link": "https://www.jobstreet.com",
            "footer.linkText": "JobStreet International",
            "footer.privacyLink": "https://jobstreet.com.my/en/about-us/privacy-policy/",
            "footer.privacyLinkText": "Privacy Policy",
            "footer.profilesLink": "https://jobstreet.com.my/career/JobStreet.htm",
            "footer.profilesLinkText": "Work With Us",
            "footer.safeLink": "https://jobstreet.com.my/en/about-us/safe-job-search-guide/",
            "footer.safeLinkText": "Safe Job Search Guide",
            "footer.siteMapLink": "https://jobstreet.com.my/sitemap.htm",
            "footer.siteMapLinkText": "Site Map",
            "footer.termsLink": "https://jobstreet.com.my/en/about-us/terms-of-use/",
            "footer.termsLinkText": "Term of Use",
            "header.careerInsightsLink": "https://jobstreet.com.my/en/career-insights",
            "header.careerInsightsText": "Career Insights",
            "header.careerInsightsTitle": "JobStreet.com Malaysia - Career Insights",
            "header.classifiedJobsLink": "https://www.jobstreet.com.my/en/job-search/classified-ads.php",
            "header.classifiedJobsText": "Classified Jobs",
            "header.classifiedJobsTitle": "",
            "header.companyProfilesLink": "https://jobstreet.com.my/en/companies",
            "header.companyProfilesText": "Company Profiles",
            "header.companyProfilesTitle": "JobStreet.com Malaysia - Company Profiles",
            "header.employerLink": "https://jobstreet.com.my/en/cms/employer",
            "header.employerText": "Employer",
            "header.employerTitle": "Post a Job Ad: +603-2176 0333",
            "header.freshGradJobsLink": "https://www.jobstreet.com.my/en/job-search/campus/job-vacancy.php",
            "header.freshGradJobsText": "Fresh Grad Jobs",
            "header.freshGradJobsTitle": "",
            "header.helpLink": "https://myjobstreet.jobstreet.com.my/home/help.php?",
            "header.helpText": "Help",
            "header.helpTitle": "",
            "header.homeLink": "https://jobstreet.com.my",
            "header.homeText": "Home",
            "header.homeTitle": "Leading Job Site in Malaysia - Find Jobs in Malaysia",
            "header.jobStreetEducationLink": "https://www.jobstreeteducation.com.my/",
            "header.jobStreetEducationText": "Education",
            "header.jobStreetEducationTitle": "",
            "header.loginLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my&language_code=3",
            "header.loginText": "Log In",
            "header.loginTitle": "",
            "header.logoutLink": "https://myjobstreet.jobstreet.com.my/home/logout.php?",
            "header.logoutText": "Logout",
            "header.logoutTitle": "",
            "header.moreText": "More",
            "header.moreTitle": "",
            "header.myAccountLink": "https://myjobstreet.jobstreet.com.my/registration/update-account.php?",
            "header.myAccountText": "My Account",
            "header.myAccountTitle": "",
            "header.myJobStreetLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
            "header.myJobStreetLoggedInLink": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
            "header.myJobStreetText": "MyJobStreet",
            "header.myJobStreetTitle": "Post Resume, Signup for Job Alert & Apply for Jobs @ MyJobStreet Malaysia",
            "header.overseasJobsLink": "https://www.jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
            "header.overseasJobsText": "Overseas Jobs",
            "header.overseasJobsTitle": "",
            "header.searchLink": "https://srp-alpha.jobstreet.com",
            "header.searchText": "Search Jobs",
            "header.searchTitle": "Search Jobs @ Job Search JobStreet.com Malaysia",
            "header.signUpLink": "https://myjobstreet.jobstreet.com.my/registration/simple-signup.php?site=my&language_code=3",
            "header.signUpText": "Sign Up",
            "header.signUpTitle": "",
          }
        }
      />
    </div>
  </PageBlock>
  <PageBlock
    className="bannerWrapper"
  >
    <Section
      className="bannerContainer"
    >
      <Button
        className="toggle"
        component="button"
        fullWidth={false}
        loading={false}
        onClick={[Function]}
      >
        <HamburgerIcon />
      </Button>
      <div
        className="logoContainer"
      >
        <a
          href="/"
          title="Leading Job Site in Malaysia - Find Jobs in Malaysia"
        >
          <Logo
            className="logo"
            svgClassName=""
          />
        </a>
      </div>
      <a
        className="employerLink"
        href="https://jobstreet.com.my/en/cms/employer"
        title="Post a Job Ad: +603-2176 0333"
      >
        <Text
          baseline={true}
          strong={true}
        >
          Employer
        </Text>
      </a>
    </Section>
  </PageBlock>
</header>
`;

exports[`JobStreet header component Localisation should render en-my 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <PageBlock
    className="navWrapper navWrapperHideOnMobile"
  >
    <div
      className="navContainer"
    >
      <Nav
        key="navLinks"
        links={
          Array [
            Object {
              "childLinks": Array [],
              "href": "header.homeLink",
              "text": "header.homeText",
              "title": "header.homeTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.searchLink",
              "text": "header.searchText",
              "title": "header.searchTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.myJobStreetLink",
              "text": "header.myJobStreetText",
              "title": "header.myJobStreetTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.companyProfilesLink",
              "text": "header.companyProfilesText",
              "title": "header.companyProfilesTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.careerInsightsLink",
              "text": "header.careerInsightsText",
              "title": "header.careerInsightsTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.jobStreetEducationLink",
              "text": "header.jobStreetEducationText",
              "title": "header.jobStretEducationTitle",
            },
            Object {
              "childLinks": Array [
                Object {
                  "href": "header.overseasJobsLink",
                  "text": "header.overseasJobsText",
                  "title": "header.overseasJobsTitle",
                },
                Object {
                  "href": "header.freshGradJobsLink",
                  "text": "header.freshGradJobsText",
                  "title": "header.freshGradJobsTitle",
                },
                Object {
                  "href": "header.classifiedJobsLink",
                  "text": "header.classifiedJobsText",
                  "title": "header.classifiedJobsTitle",
                },
              ],
              "hideOnMobile": true,
              "href": "header.moreLink",
              "text": "header.moreText",
              "title": "header.moreTitle",
            },
          ]
        }
        messages={
          Object {
            "footer.aboutLink": "https://jobstreet.com.my/en/about-us/",
            "footer.aboutLinkText": "About Us",
            "footer.copyright": "Copyright © {year} JobStreet.com",
            "footer.feedbackLink": "https://myjobstreet.jobstreet.com.my/home/feedback.php?site=my&sub=feedback",
            "footer.feedbackLinkText": "Send Feedback",
            "footer.helpLink": "https://jobstreet.com.my/en/user/",
            "footer.helpLinkText": "Help",
            "footer.link": "https://www.jobstreet.com",
            "footer.linkText": "JobStreet International",
            "footer.privacyLink": "https://jobstreet.com.my/en/about-us/privacy-policy/",
            "footer.privacyLinkText": "Privacy Policy",
            "footer.profilesLink": "https://jobstreet.com.my/career/JobStreet.htm",
            "footer.profilesLinkText": "Work With Us",
            "footer.safeLink": "https://jobstreet.com.my/en/about-us/safe-job-search-guide/",
            "footer.safeLinkText": "Safe Job Search Guide",
            "footer.siteMapLink": "https://jobstreet.com.my/sitemap.htm",
            "footer.siteMapLinkText": "Site Map",
            "footer.termsLink": "https://jobstreet.com.my/en/about-us/terms-of-use/",
            "footer.termsLinkText": "Term of Use",
            "header.careerInsightsLink": "https://jobstreet.com.my/en/career-insights",
            "header.careerInsightsText": "Career Insights",
            "header.careerInsightsTitle": "JobStreet.com Malaysia - Career Insights",
            "header.classifiedJobsLink": "https://www.jobstreet.com.my/en/job-search/classified-ads.php",
            "header.classifiedJobsText": "Classified Jobs",
            "header.classifiedJobsTitle": "",
            "header.companyProfilesLink": "https://jobstreet.com.my/en/companies",
            "header.companyProfilesText": "Company Profiles",
            "header.companyProfilesTitle": "JobStreet.com Malaysia - Company Profiles",
            "header.employerLink": "https://jobstreet.com.my/en/cms/employer",
            "header.employerText": "Employer",
            "header.employerTitle": "Post a Job Ad: +603-2176 0333",
            "header.freshGradJobsLink": "https://www.jobstreet.com.my/en/job-search/campus/job-vacancy.php",
            "header.freshGradJobsText": "Fresh Grad Jobs",
            "header.freshGradJobsTitle": "",
            "header.helpLink": "https://myjobstreet.jobstreet.com.my/home/help.php?",
            "header.helpText": "Help",
            "header.helpTitle": "",
            "header.homeLink": "https://jobstreet.com.my",
            "header.homeText": "Home",
            "header.homeTitle": "Leading Job Site in Malaysia - Find Jobs in Malaysia",
            "header.jobStreetEducationLink": "https://www.jobstreeteducation.com.my/",
            "header.jobStreetEducationText": "Education",
            "header.jobStreetEducationTitle": "",
            "header.loginLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my&language_code=3",
            "header.loginText": "Log In",
            "header.loginTitle": "",
            "header.logoutLink": "https://myjobstreet.jobstreet.com.my/home/logout.php?",
            "header.logoutText": "Logout",
            "header.logoutTitle": "",
            "header.moreText": "More",
            "header.moreTitle": "",
            "header.myAccountLink": "https://myjobstreet.jobstreet.com.my/registration/update-account.php?",
            "header.myAccountText": "My Account",
            "header.myAccountTitle": "",
            "header.myJobStreetLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
            "header.myJobStreetLoggedInLink": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
            "header.myJobStreetText": "MyJobStreet",
            "header.myJobStreetTitle": "Post Resume, Signup for Job Alert & Apply for Jobs @ MyJobStreet Malaysia",
            "header.overseasJobsLink": "https://www.jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
            "header.overseasJobsText": "Overseas Jobs",
            "header.overseasJobsTitle": "",
            "header.searchLink": "https://srp-alpha.jobstreet.com",
            "header.searchText": "Search Jobs",
            "header.searchTitle": "Search Jobs @ Job Search JobStreet.com Malaysia",
            "header.signUpLink": "https://myjobstreet.jobstreet.com.my/registration/simple-signup.php?site=my&language_code=3",
            "header.signUpText": "Sign Up",
            "header.signUpTitle": "",
          }
        }
      />
      <Nav
        key="userLinks"
        links={
          Array [
            Object {
              "childLinks": Array [],
              "hasRightSideDivider": true,
              "href": "header.loginLink",
              "text": "header.loginText",
              "title": "header.loginTitle",
            },
            Object {
              "childLinks": Array [],
              "href": "header.signUpLink",
              "text": "header.signUpText",
              "title": "header.signUpTitle",
            },
          ]
        }
        messages={
          Object {
            "footer.aboutLink": "https://jobstreet.com.my/en/about-us/",
            "footer.aboutLinkText": "About Us",
            "footer.copyright": "Copyright © {year} JobStreet.com",
            "footer.feedbackLink": "https://myjobstreet.jobstreet.com.my/home/feedback.php?site=my&sub=feedback",
            "footer.feedbackLinkText": "Send Feedback",
            "footer.helpLink": "https://jobstreet.com.my/en/user/",
            "footer.helpLinkText": "Help",
            "footer.link": "https://www.jobstreet.com",
            "footer.linkText": "JobStreet International",
            "footer.privacyLink": "https://jobstreet.com.my/en/about-us/privacy-policy/",
            "footer.privacyLinkText": "Privacy Policy",
            "footer.profilesLink": "https://jobstreet.com.my/career/JobStreet.htm",
            "footer.profilesLinkText": "Work With Us",
            "footer.safeLink": "https://jobstreet.com.my/en/about-us/safe-job-search-guide/",
            "footer.safeLinkText": "Safe Job Search Guide",
            "footer.siteMapLink": "https://jobstreet.com.my/sitemap.htm",
            "footer.siteMapLinkText": "Site Map",
            "footer.termsLink": "https://jobstreet.com.my/en/about-us/terms-of-use/",
            "footer.termsLinkText": "Term of Use",
            "header.careerInsightsLink": "https://jobstreet.com.my/en/career-insights",
            "header.careerInsightsText": "Career Insights",
            "header.careerInsightsTitle": "JobStreet.com Malaysia - Career Insights",
            "header.classifiedJobsLink": "https://www.jobstreet.com.my/en/job-search/classified-ads.php",
            "header.classifiedJobsText": "Classified Jobs",
            "header.classifiedJobsTitle": "",
            "header.companyProfilesLink": "https://jobstreet.com.my/en/companies",
            "header.companyProfilesText": "Company Profiles",
            "header.companyProfilesTitle": "JobStreet.com Malaysia - Company Profiles",
            "header.employerLink": "https://jobstreet.com.my/en/cms/employer",
            "header.employerText": "Employer",
            "header.employerTitle": "Post a Job Ad: +603-2176 0333",
            "header.freshGradJobsLink": "https://www.jobstreet.com.my/en/job-search/campus/job-vacancy.php",
            "header.freshGradJobsText": "Fresh Grad Jobs",
            "header.freshGradJobsTitle": "",
            "header.helpLink": "https://myjobstreet.jobstreet.com.my/home/help.php?",
            "header.helpText": "Help",
            "header.helpTitle": "",
            "header.homeLink": "https://jobstreet.com.my",
            "header.homeText": "Home",
            "header.homeTitle": "Leading Job Site in Malaysia - Find Jobs in Malaysia",
            "header.jobStreetEducationLink": "https://www.jobstreeteducation.com.my/",
            "header.jobStreetEducationText": "Education",
            "header.jobStreetEducationTitle": "",
            "header.loginLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my&language_code=3",
            "header.loginText": "Log In",
            "header.loginTitle": "",
            "header.logoutLink": "https://myjobstreet.jobstreet.com.my/home/logout.php?",
            "header.logoutText": "Logout",
            "header.logoutTitle": "",
            "header.moreText": "More",
            "header.moreTitle": "",
            "header.myAccountLink": "https://myjobstreet.jobstreet.com.my/registration/update-account.php?",
            "header.myAccountText": "My Account",
            "header.myAccountTitle": "",
            "header.myJobStreetLink": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
            "header.myJobStreetLoggedInLink": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
            "header.myJobStreetText": "MyJobStreet",
            "header.myJobStreetTitle": "Post Resume, Signup for Job Alert & Apply for Jobs @ MyJobStreet Malaysia",
            "header.overseasJobsLink": "https://www.jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
            "header.overseasJobsText": "Overseas Jobs",
            "header.overseasJobsTitle": "",
            "header.searchLink": "https://srp-alpha.jobstreet.com",
            "header.searchText": "Search Jobs",
            "header.searchTitle": "Search Jobs @ Job Search JobStreet.com Malaysia",
            "header.signUpLink": "https://myjobstreet.jobstreet.com.my/registration/simple-signup.php?site=my&language_code=3",
            "header.signUpText": "Sign Up",
            "header.signUpTitle": "",
          }
        }
      />
    </div>
  </PageBlock>
  <PageBlock
    className="bannerWrapper"
  >
    <Section
      className="bannerContainer"
    >
      <Button
        className="toggle"
        component="button"
        fullWidth={false}
        loading={false}
        onClick={[Function]}
      >
        <HamburgerIcon />
      </Button>
      <div
        className="logoContainer"
      >
        <a
          href="/"
          title="Leading Job Site in Malaysia - Find Jobs in Malaysia"
        >
          <Logo
            className="logo"
            svgClassName=""
          />
        </a>
      </div>
      <a
        className="employerLink"
        href="https://jobstreet.com.my/en/cms/employer"
        title="Post a Job Ad: +603-2176 0333"
      >
        <Text
          baseline={true}
          strong={true}
        >
          Employer
        </Text>
      </a>
    </Section>
  </PageBlock>
</header>
`;
